--- a/style/footer.css
+++ b/style/footer.css
@@ -1,5 +1,17 @@
 <style>
-footer {
-  visibility: hidden;
+.footer {
+position: fixed;
+background-color: #0E1117;
+height: 50px;
+line-height: 50px;
+left: 0;
+bottom: 0;
+width: 100%;
+color: white;
+text-align: center;
+z-index: 9999;
 }
 </style>
+<div class="footer">
+<p>Developed by <a href="https://1cy1c3.eth.limo" style="color: lightblue; text-decoration: none;">1cy1c3.eth</a></p>
+</div>
